Fixed bad alignment of buttons in Messaging Thread view

--- a/rsc/less/bootstrap-evoskins.less
+++ b/rsc/less/bootstrap-evoskins.less
@@ -998,7 +998,7 @@ div.edit_toolbars, div.message_toolbars {
 		a {
 			display: inline-block;
 			&:last-child {
-				margin-bottom: 0;
+				// margin-bottom: 0;
 			}
 		}
 	}
